--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "jsonwebtoken": "^8.5.0",
         "mongoose": "^5.4.2",
         "mongoose-unique-validator": "^2.0.2",
+        "standard": "^12.0.1",
         "swagger-ui-express": "^4.0.2",
         "winston": "^3.2.1",
         "winston-daily-rotate-file": "^3.8.0"
