--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
         "boom": "^7.3.0",
         "chalk": "^2.4.2",
         "cors": "^2.8.5",
+        "elasticsearch": "^16.2.0",
         "exec": "^0.2.1",
         "express-oauth-server": "^2.0.0",
         "fingerprint": "0.0.1",
         "formidable": "^1.2.1",
         "joi": "^14.3.1",
         "jsonwebtoken": "^8.5.0",
-        "mongoose": "^5.4.2",
+        "mongoose": "^5.6.4",
         "mongoose-unique-validator": "^2.0.2",
         "standard": "^12.0.1",
-        "swagger-ui-express": "^4.0.2",
+        "swagger-ui-express": "^4.0.7",
         "winston": "^3.2.1",
         "winston-daily-rotate-file": "^3.8.0"
     },
